# agent_framework

./: .dockerignore  .env.example  .gitignore  DATA_PLATFORM_INTEGRATION.md  Dockerfile  README.md  SKILL_CREATOR.md  deploy.sh  docker-compose.yml  doctor.py  nginx.conf  pyproject.toml  requirements.txt  simple_app.py  start.command  start_app.py  start_embedding_api.py  start_reme_memory.py  test_data_platform.py  web.html  一键启动.bat
crates/: README.md
data/: test_config.yaml
data/knowledge_bases/: 87c57b37-88f6-4168-b4dc-dca177f91762.json  8bf0006b-d4cf-42bb-96b3-84dd7322aa9e.json
data/memory/: MEMORY.md
data/memory/daily/: 2026-03-15.md
data_platform/: .env.production  .gitignore  .stylelintcache  Paper_Intelligent_Wind_Turbine_OandM_System.md  convert_md_to_docx.py  index.html  package.json  start_server.py  vercel.json  vite.config.ts
data_platform/docs/: index.html
data_platform/docs/assets/: MapView-CXgfl2NL.css  MonitorView-BLq_hoV4.css  VideoAnalysisView-B7M9OViz.css  VideoAnalysisView-BK8HNRhZ.css  VideoAnalysisView-BQ1ARYxe.css  VideoAnalysisView-BlxgcWN_.css  VideoAnalysisView-CNFFQD8W.css  VideoAnalysisView-COB9uinP.css  VideoAnalysisView-CfcIKl7K.css  VideoAnalysisView-CgCnXJIT.css  VideoAnalysisView-CjHZiQnC.css  VideoAnalysisView-DEgrFqOq.css  VideoAnalysisView-DHbQ925I.css  VideoAnalysisView-DzCY8cC7.css  VideoAnalysisView-SIT7WGpu.css  index-iHfPkjyG.css
data_platform/docs/js/: @vue-hjwuK2GK.js  (+24 more)
data_platform/server/: api.js
data_platform/src/: App.vue  main.ts
deploy/: README.md
docs/: README.md  agent_tool_selection.md  api_modules.md  api_reference.md  architecture.md  deployment_guide.md  development_guide.md  gateway_websocket_usage.md  lance_memory_store.md  language_ownership_matrix.md  migration_roadmap.md  migration_target_architecture.md  openclaw_memory.md  optimized_memory_store.md  project_statistics.md  quick_reference.md  reme_memory_sidecar.md  troubleshooting.md  user_tools_guide.md
examples/: openclaw_memory_demo.py  user_tools_demo.py
frontend/: README.md
go_services/gateway/: Dockerfile  Makefile  go.mod
go_services/task_executor/: README.md  go.mod  main.go
plugins/: data_processor.py  plugins.yaml
rust_extensions/: BUILD.md
rust_extensions/causal_core/: Cargo.toml
rust_extensions/retrieval_core/: Cargo.toml
rust_extensions/vector_core/: Cargo.toml
rust_extensions/vector_core/src/: lib.rs
rust_extensions/ws_server/: Cargo.toml
rust_extensions/ws_server/src/: main.rs
scripts/: start_wsl_embedding.sh  start_wsl_vllm_chat.sh
services/: README.md
services/ai-python/: Dockerfile  README.md  pyproject.toml
services/ai-python/src/ai_service/: __init__.py  app.py  config.py  contracts.py
services/ai-python/src/ai_service/routes/: chat.py  context.py  health.py  model_routing.py  multi_agent.py
services/app-go/: README.md  go.mod
services/gateway-go/: Dockerfile  README.md  go.mod
services/model-python/: Dockerfile  README.md  pyproject.toml
services/model-python/src/model_service/: __init__.py  app.py  config.py
services/model-python/src/model_service/routes/: __init__.py  multimodal.py  rerank.py  rlhf.py  serving.py
services/retrieval-python/: Dockerfile  README.md  pyproject.toml
services/retrieval-python/src/retrieval_service/: __init__.py  app.py  config.py
services/retrieval-python/src/retrieval_service/routes/: documents.py  health.py  knowledge.py  rag.py
services/task-executor-go/: Dockerfile  README.md  go.mod
shared/: README.md
shared/config/: language_ownership.yaml
src/agent_framework/: __init__.py
tests/: conftest.py  test_agent_runtime_optimizations.py  test_api_docs.py  test_context_builder.py  test_gateway_layer.py  test_harness_health.py  test_memory_api_backend.py  test_memory_backend_registry.py  test_memory_config.py  test_model_serving.py  test_openai_agents_adapter.py  test_optimizations.py  test_plugin_market.py  test_reme_proxy_store.py  test_start_app.py  test_system_status.py  test_tool_api_security.py  test_tool_selection.py
(+386 files in other folders)
