[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-framework-model-service"
version = "0.1.0"
description = "Model-plane service for model serving, RLHF training, multimodal inference, and reranking"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.scripts]
model-service = "model_service.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_service"]
