[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-framework-retrieval-service"
version = "0.1.0"
description = "Retrieval-plane service for RAG composition, knowledge base orchestration, and document processing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.scripts]
retrieval-service = "retrieval_service.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_service"]
